<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".InGame" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />
    <!--
         <SurfaceView 
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <!-- Questions remaining Field -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#33FF66"
            android:orientation="horizontal" >

            <!-- Remain Fields Title -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtRemainTitle"
                android:textColor="#FF0000"
                android:textSize="17sp" />

            <!-- Hard -->

            <TextView
                android:id="@+id/txtHardRemain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtHardSymbol"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <!-- Medium -->

            <TextView
                android:id="@+id/txtMediumRemain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtMediumSymbol"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp" />

            <!-- Easy -->

            <TextView
                android:id="@+id/txtEasyRemain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtEasySymbol"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
        </LinearLayout>

        <!-- Score Field -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#33FF66"
            android:orientation="horizontal" >

            <!-- Player 1 -->

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/x" />

            <TextView
                android:id="@+id/txtScore1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/zeroPoint"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <!-- Player 2 -->

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/o" />

            <TextView
                android:id="@+id/txtScore2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/zeroPoint"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <!-- Board Game -->

        <GridView
            android:id="@+id/boardGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:numColumns="4" >
        </GridView>

        <!-- Turn View -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#33FF66"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ivTurn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/x" />

            <TextView
                android:id="@+id/txtTurn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/XturnMessage"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/dummy_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>